<resources>
    <string name="app_name">Orange Library</string>
    // section title
    <string name="tv_title_main">Lista de Libros</string>
    <string name="tv_title_form">Libro</string>
    // params
    <string name="tv_title">Titulo del libro</string>
    <string name="tv_author">Autor(es)</string>
    <string name="tv_editorial">Editorial</string>
    <string name="tv_year">Año</string>
    <string name="tv_price">Precio $</string>
    <string name="spn_category">Categoría</string>
    // images
    <string name="iv_cover_page">Imagen de portada del elemento</string>
    // button
    <string name="btn_new_book_main">Nuevo Libro</string>
    <string name="btn_delete">X</string>
    <string name="btn_upload_image">Subir imagen</string>
    <string name="btn_add_edit">Agregar</string>
</resources>
