<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookFormActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="33dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/tv_title_form"
        android:textAlignment="center"
        android:textColor="@color/text_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_form_title"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/tv_title"
        android:inputType="textPersonName"
        android:textColor="@color/text_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/iv_form_book"
        android:layout_width="276dp"
        android:layout_height="247dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/iv_cover_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_book_orange"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/tv_form_author"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/tv_author"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/text_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_form_title" />

    <EditText
        android:id="@+id/tv_form_year"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/tv_year"
        android:inputType="number|phone"
        android:textColor="@color/text_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_form_editorial"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/tv_form_editorial"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/tv_editorial"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_form_author" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="44dp"
        android:text="@string/btn_upload_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_form_year"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_form_add_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_add_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>