<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="366dp"
        android:layout_height="94dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_main_book"
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/iv_cover_page"
                app:srcCompat="@drawable/ic_book_orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_main_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:text="@string/tv_title"
                    android:textColor="@color/text_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="223dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"/>

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/ceviche_one"
                        android:text="@string/btn_delete"
                        android:textSize="24sp"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>